--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "deps/byakuren"]
 path = deps/byakuren
-url = https://github.com/XadillaX/byakuren.git
+url = https://github.com/leeleoo/byakuren.git
